Layout bug fix

--- a/frontend/src/less/commons.less
+++ b/frontend/src/less/commons.less
@@ -25,6 +25,7 @@
 
 .selected {
 	border-bottom: solid 3px lightgreen;
+	transition: height 0.5s;
 }
 
 .darkgrey-bottom-border {
